# kavach

./: .gitignore  =0.4.0  README.md  config.yaml.example  pyproject.toml  requirements.txt
configs/: config.yaml.example
data/: dataset_report.txt
docs/: architecture.md
scripts/: build_dataset.py  bulk_collector.py  compare_asr.py  run_pipeline.py  run_web_dashboard.py  test_with_audio.py
src/: __init__.py
src/kavach/audio/: __init__.py  buffer.py  vad.py
src/kavach/detection/: classifier.py  heuristics.py  slm.py
src/kavach/fusion/: risk_scorer.py
src/kavach/transcription/: gemini_asr.py  whisper_asr.py
src/kavach/ui/: terminal_ui.py  web_server.py
src/kavach/ui/static/: index.html
tests/: test_audio.py  test_classifier.py  test_fusion.py  test_heuristics.py  test_slm.py  test_terminal_ui.py  test_transcription.py  test_web_server.py
