[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kavach"
version = "0.1.0"
description = "Kavach audio processing and fraud detection"
authors = [{name = "Kavach Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pytest",
]

[tool.setuptools]
packages = ["kavach"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
